# travel-diary-survey-tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: README.md  ci.yml  pr-checks.yml
Mode Standardization/: mode_standardization.md
archive/config/: pipeline_config_mtc.toml  pipeline_config_sfcta.toml  pipeline_config_test.toml
archive/survey_processing/ARC/: ARC_Tours_And_Trips_Stored_Procedures_Functions.sql  Part-1_ARC_Table_Definitions.sql  Part-2_ARC_Fixing_Missing_Records.sql  Part-4_ARC_Coding_Tours_And_Trips.sql
archive/survey_processing/SFCTA/: 00-preprocess.py  01-taz_spatial_join.py  02a-reformat.py  02b-link_trips_week.py  03a-tour_extract_week.py  03a-tour_extract_week_func.py  03b-assign_day.py  run.py
config/: pipeline_config_sfcta.toml
daysim_pipeline/: 01-taz_spatial_join.py  02a-reformat.py  02b-link_trips_week.py  03a-tour_extract_week.py  03b-assign_day.py  pipeline_config.toml  pipeline_config_mtc.toml
docs/: COLUMN_REQUIREMENTS.md  VALIDATION_README.md  column_requirements.csv
projects/bats_2023/: config.yaml  run.py
projects/bats_2023/analyses/: README.md  analyze_transit.py  analyze_wfh.html  analyze_wfh.qmd  investigation.qmd
projects/bats_2023/compare/: daysim_compare.py  helpers.py  household_comparison.py
scripts/: calibrate_joint_trip_covariance.py  generate_column_matrix.py  investigation.qmd  summarize_pipeline_run.py
scripts/daysim_old/config/: pipeline_config_mtc.toml  pipeline_config_sfcta.toml  pipeline_config_test.toml
scripts/daysim_old/survey_processing/: 02a-reformat.py  03b-assign_day.py
src/data_canon/: __init__.py
src/data_canon/codebook/: __init__.py  days.py  daysim.py  generic.py  households.py  persons.py  tours.py  trips.py  vehicles.py
src/data_canon/core/: __init__.py  dataclass.py  exceptions.py  labeled_enum.py  step_field.py  validators.py
src/data_canon/models/: __init__.py  ctramp.py  daysim.py  survey.py
src/data_canon/validation/: __init__.py  column.py  custom.py  relational.py  row.py
src/pipeline/: __init__.py  cache.py  decoration.py  logger.py  pipeline.py
src/processing/: __init__.py
src/processing/add_zone_ids/: __init__.py  add_zone_ids.py
src/travel_diary_survey_tools/: __init__.py  linker.py  models.py  utils.py
src/utils/: __init__.py  create_ids.py  helpers.py
survey_processing/: 00-preprocess.py  01-taz_spatial_join.py  02a-reformat.py  03a-tour_extract_week.py
survey_processing/ARC/: Part-3_ARC_Linking_Trips.sql  Part-5_ARC_Coding_Individual_And_Joint_Tours_Trips.sql
survey_processing/SFCTA/: 00-preprocess.py  03b-assign_day.py  LICENSE  README.txt
tests/: __init__.py  test_add_zone_ids.py  test_cache.py  test_daysim_formatter.py  test_duration_tiebreaker.py  test_joint_tours.py  test_joint_trips.py  test_legacy_link_trips.py  test_legacy_tours.py  test_link_trips.py  test_linker.py  test_logger.py  test_pipeline_status.py  test_read_write.py  test_step_validation.py  test_tour_edge_cases.py  test_tour_priority.py  test_tour_validation.py  test_utils.py  test_validation.py  test_validation_coverage.py
tests/fixtures/: __init__.py  base_records.py  daysim_test_data.py  field_utils.py  fixtures.py  locations.py  scenario_builders.py  tour_records.py  tour_test_data.py  trip_records.py
trip_linkage/corres/: lookup_d_purpose_reported.csv  lookup_mode.csv  lookup_mode_type.csv  lookup_o_purpose_reported.csv  lookup_transit_access.csv  lookup_transit_egress.csv
trip_linkage/script/: build_linked_trips_main_type_weight_version_vta.ipynb
(+46 files in other folders)
