
[project]
name = "travel-diary-survey-tools"
version = "0.1.0"
description = "Set of tools to process and analyze travel diary survey data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "pandera[polars]>=0.26.1",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/travel_diary_survey_tools"]

[tool.ruff]
line-length = 80
lint.select = ["ALL"]
lint.ignore = [
    "D203",  # Use D211 (no blank line before class)
    "D213",  # Use D212 (summary on first line)
]
exclude = ["scripts/daysim"]


[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",      # assert is fine in tests
    "PLR0913",   # many arguments OK for test helpers
    "ANN",       # type annotations optional in tests
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=travel_diary_survey_tools --cov-report=term-missing"